Business rule running correctly prevents same account signup twice
